--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@nodestrap/spacers",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "A spacing management system for web components using css variables (css custom properties).",
+  "type": "module",
   "main": "dist/spacers.js",
   "types": "dist/spacers.d.ts",
   "scripts": {
@@ -30,7 +31,7 @@
   },
   "homepage": "https://github.com/nodestrap/spacers#readme",
   "dependencies": {
-    "@cssfn/css-config": "^1.0.0",
-    "@cssfn/css-types": "^1.0.1"
+    "@cssfn/css-config": "^1.0.1",
+    "@cssfn/css-types": "^1.0.2"
   }
 }
